--- a/.travis.yml
+++ b/.travis.yml
@@ -1,2 +1,3 @@
 language: bash
-script: bash tests/tests.bash
+before_script: git clone git@github.com:PhillipSz/translationcheck.git
+script: bash translationcheck/tests/tests.bash
