--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,11 @@
 dist: trusty
-language: bash
-script: ./tests/tests.bash
+language: python
+python:
+  - "3.2"
+  - "3.3"
+  - "3.4"
+  - "3.5"
+  - "3.5-dev" # 3.5 development branch
+  - "nightly" # currently points to 3.6-dev
+# command to run tests
+script: ./tests/tests.py
